monsterblock.css
/* ... */
.monsterblock .attributes .attribute .select-field {
	text-indent: initial;
}
.monsterblock .attribute-name {
	display: inline;
	font-weight: bold;
}
.monsterblock .ability-title {
	display: block;
	font-weight: bold;
	margin: 0;
	text-transform: uppercase;
}
.monsterblock .monster-saves .ability-title {
	display: inline;
	font-weight: normal;
	margin: 0;
	text-transform: capitalize;
}

.monsterblock input {
	border: none;
}
.monsterblock .inline-list {
	display: inline;
	list-style: none;
	padding: 0;
}
.monsterblock .inline-list li {
	display: inline;
}
.monsterblock .inline-list li:after {
    content: var(--list-seperator) ' ';
    text-shadow: none;
	color: var(--main-text-color);
}
.monsterblock header .inline-list li:after {
	color: var(--heading-color);
}

.monsterblock .inline-list li:last-of-type:after {
    content: '';
}
.monsterblock .spell-list {
	list-style: none;
	margin-top: 1em;
	padding: 0;
	padding-left: 2ch;
	text-indent: -2ch;
}
.monsterblock .at-will-spells {
	display: inline;
	list-style: none;
	padding: 0;
}
.monsterblock .at-will-spells li {
	display: inline;
}
.monsterblock .at-will-spells li:after {
	content: var(--list-seperator) ' ';
	text-shadow: none;
	color: var(--main-text-color);
}
.monsterblock .at-will-spells 
li:not(:first-of-type):nth-last-of-type(2):after {
	content: var(--list-seperator) ' ' var(--list-conjuntion) ' ';
}
.monsterblock .at-will-spells 
li:nth-last-of-type(2):after {
	content: ' ' var(--list-conjuntion) '  ';
}
.monsterblock .at-will-spells li:last-of-type:after {
	content: '';
}
.monsterblock .spell-name {
	font-style: italic;
}
.monsterblock .monster-saves .ability {
	display: inline;
}
.monsterblock .section-header {
	break-before: auto;
	break-after: avoid;
	break-inside: avoid;
	margin-top: 0.5em;
	margin-bottom: -.4em;
	line-height: 1em;
	font-size: 1.5em;
	color: var(--heading-color);
	font-variant: small-caps;
	border-bottom: 1px solid var(--heading-color);
}
.monsterblock .item {
	margin-top: 1em;
	/* display: inline-flex; */
}
.monsterblock .item-name,
.monsterblock .name-extension {
	font-weight: bold;
	font-style: italic;
}
.monsterblock .spell .name-extension {
	font-weight: initial;
}
.monsterblock .legendary-actions .item-name,
.monsterblock .legendary-actions .name-extension {
	font-weight: bold;
	font-style: normal;
}
.monsterblock .legendary-actions,
.monsterblock .lair-actions {
	margin: 0;
}
.monsterblock .legendary-description {
	margin-top: 1em;
	margin-bottom: 1em;
}

.monsterblock .attack-type {
	font-style: italic;
}
.monsterblock .hit-label {
	font-style: italic;
}
.monsterblock .inline-children 
.description p:first-of-type,
.monsterblock .inline-children 
.description div:first-of-type:not(.select-field) {
	display: inline;
}
.monsterblock .description {
	line-height: 1.3em;
}

.monsterblock *:hover > [contenteditable=true]:empty::after,
.monsterblock *:hover > .editable-wrapper > [contenteditable=true]:empty::after,
.monsterblock [contenteditable=true]:focus:empty::after {
	text-shadow: none;
	content: attr(placeholder);
	color: var(--faded-text);
}
.monsterblock .optional-comma:not(:empty):before {
	content: var(--list-seperator) ' ';
}
.monsterblock .editing *:hover > .optional-comma:empty:before {
	content: var(--list-seperator) ' ';
	color: var(--faded-text);
}
.monsterblock .optional-space:not(:empty):before,
.monsterblock .editing *:hover > .optional-space:empty:before {
	content: '\00a0';
}
.monsterblock [contenteditable=true]:empty {
	display: inline-block;
	text-indent: 0;
	/* line-height: 1.1em; */
	height: .9em;
}
.monsterblock [contenteditable=true]:active,
.monsterblock [contenteditable=true]:focus, 
.monsterblock [contenteditable=true]:hover {
	outline: none;
	text-decoration: dotted underline;
}
.monsterblock .select-field:hover .select-label,
.monsterblock .select-list li:hover {
	text-decoration: dotted underline;
}

.monsterblock .select-field {
	display: inline-block;
	position: relative;
	cursor: pointer;
}
.monsterblock .select-label {
	cursor: pointer;
}
.monsterblock .select-list,
.monsterblock .hover-list,
.monsterblock .simple-menu ul {
	padding-left: .3em;
	padding-right: .4em;
	box-shadow: 0px 0px 1px 0px var(--shadow-color);
}
.monsterblock .select-list,
.monsterblock .hover-list,
.monsterblock .menu ul {
	visibility: hidden;
	display: block;
	position: absolute;
	list-style: none;
	background: var(--background-image), var(--background-filter);
	background-repeat: repeat;
	background-blend-mode: var(--background-blend);
	z-index: 1;
}
.monsterblock .menu ul {
	text-align: left;
}
.monsterblock .select-list {
	position: fixed;
	margin-top: 0;
	margin-left: -.5ch;
}
.monsterblock .select-list li {
	cursor: pointer;
}
.monsterblock .select-field:hover .select-list {
	visibility: visible;
}
.monsterblock .editor {
	height: 100%;
}
.monsterblock .bio-box h2 {
	margin-top: 2.5em;
}
.monsterblock .biography {
	margin-top: 2em;
	--min-height: 30em;
	max-height: var(--column-width);
	margin-top: .5em;
	height: fit-content;
	min-height: var(--min-height);
	overflow-y: auto;
	align-content: flex-start;
	display: block;
	break-inside: auto;
	flex-direction: column;
	flex-wrap: nowrap;
}
.monsterblock .biography .editor-content {
	min-height: var(--min-height);
}
.monsterblock .biography .tox-tbtn--select.tox-tbtn--bespoke {
	font-size: .7em;
	width: 10ch;
}
.monsterblock .biography .editor-content img {
	cursor: pointer;
}
.monsterblock .header-resource {
	float: right;
	font-size: .7em;
}
.monsterblock .hover-list,
.monsterblock .simple-menu ul {
	text-indent: 0;
	width: fit-content;
	top: -7px;
	left: -1.3em;
	white-space: nowrap;
}
.monsterblock *:hover > .position-wrapper > .hover-list {
	visibility: visible;
}
.monsterblock .position-wrapper {
	width: 0px;
	height: 0px;
	position: fixed;
	margin: 0;
	z-index: 1;
}

/* Mini Blocks */

.monsterblock.compact-layout,
.grid-cell .monsterblock .switches > i,
.monsterblock.compact-window .switches > i {
	visibility: hidden;
}
/* ... */

